# frc-api

./: .gitignore  LICENSE  OutPutsJson.py  README.md  pyproject.toml  readthedocs.yaml  requirements.txt  test_MatchResults.py  test_SeasonData.py  todo.md
.github/workflows/: flake8.yml  python-app.yml
Tests/: rankings_test.py  test_FrcWrapper.py  test_MatchResults.py  test_SeasonData.py  test_matchresults.py  test_rankings.py  test_seasondata.py
Tests/ProperOutput/: Event_Rankings_test_1.json  Event_Rankings_test_2.json  ScoreDetails_test_1.json  SeasonSummary_test_1.json  district_listings_test_1.json  district_rankings_test_1.json  district_rankings_test_2.json  district_rankings_test_3.json  district_rankings_test_4.json  district_rankings_test_5.json  event_listings_test_1.json  event_listings_test_2.json  event_listings_test_3.json  event_listings_test_4.json  event_listings_test_5.json  event_listings_test_6.json  event_match_results_test_1.json  event_match_results_test_2.json  event_match_results_test_3.json  event_match_results_test_4.json  event_rankings_test_2.json  event_rankings_test_3.json  score_details_test_2.json  score_details_test_3.json  score_details_test_4.json  team_avatar_listings_test_1.json  team_avatar_listings_test_2.json  team_avatar_listings_test_3.json  team_avatar_listings_test_5.json  team_listings_test_1.json  team_listings_test_2.json  team_listings_test_3.json  team_listings_test_4.json  team_listings_test_5.json  team_listings_test_6.json
docs/: conf.py  index.rst  rankings.md  requirements.txt
src/FrcApi.egg-info/: PKG-INFO  (+2 more)
(+35 files in other folders)
